# body_volume_calculation

./: .gitignore  README.md  REPORT.md  generate_report.py  human_body_volume.py  pyproject.toml  test_generate_report.py  test_human_body_volume.py
.github/workflows/: ci.yml  pylint.yml
tests/: conftest.py  test_generate_report.py  test_human_body_volume.py
